// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db add member tests Member Role Tests Adds a member role to the database and then deletes it 1`] = `
{
  "createdAt": Any<String>,
  "createdBy": 0,
  "description": "My Desc",
  "isPublic": true,
  "name": {
    "en": "en name",
    "fi": "fi name",
  },
  "permissions": [
    "aircraft.admin",
    "booking.admin",
  ],
  "roleId": "TEST_ROLE",
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db add member tests add member and update member 1`] = `
{
  "billingId": "MEMBER",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": undefined,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isTrainingProgramPilot": false,
  "lastName": "member",
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": null,
  "postcode": null,
  "roles": [],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db add member tests add member and update member 2`] = `
{
  "billingId": "MEMBER",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": undefined,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test2",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isTrainingProgramPilot": false,
  "lastName": "member",
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": 0,
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": 0,
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db query member tests getMemberByEmail should return member data for a valid email address 1`] = `
{
  "billingId": "BILL005",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": 5,
  "dateOfBirth": Any<String>,
  "email": "pekka.hamalainen@example.com",
  "emailVerifiedAt": undefined,
  "firstName": "Pekka",
  "iceContactName": "Kaisa Hämäläinen",
  "iceContactPhoneNumber": "0441098765",
  "isTrainingProgramPilot": false,
  "lastName": "Hämäläinen",
  "memberId": 5,
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "phoneNumber": "0445678901",
  "postcode": "20100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": 1,
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": 0,
    },
    {
      "createdAt": Any<String>,
      "createdBy": 1,
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": 0,
    },
  ],
  "streetAddress": "Lönnrotinkatu 20",
  "townCity": "Turku",
  "updatedAt": Any<String>,
  "updatedBy": 5,
}
`;

exports[`Db query member tests getMemberById should return member data for a valid id 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": 1,
  "dateOfBirth": "1980-01-15",
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": false,
  "lastName": "Virtanen",
  "memberId": 1,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": 1,
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": 0,
    },
    {
      "createdAt": Any<String>,
      "createdBy": 1,
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": 0,
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": 1,
}
`;

exports[`Db query member tests getMemberById should return member data for a valid member id 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": 1,
  "dateOfBirth": Any<String>,
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": false,
  "lastName": "Virtanen",
  "memberId": 1,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": 1,
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": 0,
    },
    {
      "createdAt": Any<String>,
      "createdBy": 1,
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": 0,
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": 1,
}
`;

exports[`Db query member tests getMemberRolesByMemberId should return roles for given valid member 1`] = `
[
  {
    "createdAt": Any<String>,
    "createdBy": 1,
    "description": "Instructor with permissions to manage training",
    "isPublic": true,
    "name": {
      "en": "Instructor",
      "fi": "Lennonopettaja",
    },
    "permissions": [],
    "roleId": "INSTRUCTOR",
    "updatedAt": Any<String>,
    "updatedBy": 0,
  },
  {
    "createdAt": Any<String>,
    "createdBy": 1,
    "description": "MIK member with basic access",
    "isPublic": true,
    "name": {
      "en": "Member",
      "fi": "Jäsen",
    },
    "permissions": [
      "member",
    ],
    "roleId": "MEMBER",
    "updatedAt": Any<String>,
    "updatedBy": 0,
  },
]
`;

exports[`Db query member tests getMembers should return everything for admins 1`] = `
[
  {
    "memberId": 0,
    "name": "MIK Admin",
    "phoneNumber": null,
    "roles": [
      "ADMIN",
    ],
  },
  {
    "memberId": 5,
    "name": "Pekka Hämäläinen",
    "phoneNumber": "0445678901",
    "roles": [
      "ADMIN",
      "MEMBER",
    ],
  },
  {
    "memberId": 7,
    "name": "Antti Heikkinen",
    "phoneNumber": "0467890123",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
  {
    "memberId": 2,
    "name": "Liisa Korhonen",
    "phoneNumber": "0412345678",
    "roles": [
      "ADMIN",
      "COMMITTEE",
    ],
  },
  {
    "memberId": 8,
    "name": "Sanna Koskinen",
    "phoneNumber": "0478901234",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": 6,
    "name": "Kaisa Laine",
    "phoneNumber": "0456789012",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "memberId": 4,
    "name": "Anna Mäkinen",
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": 3,
    "name": "Jukka Nieminen",
    "phoneNumber": "0423456789",
    "roles": [
      "INSTRUCTOR",
    ],
  },
  {
    "memberId": 10,
    "name": "Marja Salminen",
    "phoneNumber": "0490123456",
    "roles": [],
  },
  {
    "memberId": 9,
    "name": "Juha Seppälä",
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
  },
  {
    "memberId": 1,
    "name": "Matti Virtanen",
    "phoneNumber": "0401234567",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
]
`;

exports[`Db query member tests getMembers should return everything for admins 2`] = `
{
  "createdAt": Any<String>,
  "createdBy": 0,
  "description": "Administrator with full access",
  "isPublic": false,
  "name": {
    "en": "Administrator",
    "fi": "Ylläpitäjä",
  },
  "permissions": [
    "member.admin",
    "flightlog.admin",
    "booking.admin",
    "aircraft.admin",
  ],
  "roleId": "ADMIN",
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db query member tests getMembers should return only approved members for valid members 1`] = `
[
  {
    "memberId": 5,
    "name": "Pekka Hämäläinen",
    "phoneNumber": "0445678901",
    "roles": [
      "MEMBER",
    ],
  },
  {
    "memberId": 7,
    "name": "Antti Heikkinen",
    "phoneNumber": "0467890123",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
  {
    "memberId": 2,
    "name": "Liisa Korhonen",
    "phoneNumber": "0412345678",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": 8,
    "name": "Sanna Koskinen",
    "phoneNumber": "0478901234",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": 4,
    "name": "Anna Mäkinen",
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "memberId": 3,
    "name": "Jukka Nieminen",
    "phoneNumber": "0423456789",
    "roles": [
      "INSTRUCTOR",
    ],
  },
  {
    "memberId": 9,
    "name": "Juha Seppälä",
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
  },
  {
    "memberId": 1,
    "name": "Matti Virtanen",
    "phoneNumber": "0401234567",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
]
`;
